added a feature to call an api to check for pastes given certain terms. Output is extremely dense. Will need to see about tidying up.

--- a/Project_4.0/templates/base.html
+++ b/Project_4.0/templates/base.html
@@ -34,8 +34,12 @@
                     </li>
 
                     <li role="presentation" class="nav-item">
-                        <a class="nav-link" href="/logout"> Logout </a>
+                        <a class="nav-link" href="/checkPastes"> Check Pastes </a>
                     </li>
+
+                    <li role="presentation" class="nav-item">
+                        <a class="nav-link" href="/logout"> Logout </a>
+                    </li>   
 
                     {% else %}
                     <li role="presentation" class="nav-item active">
