Implemented machine learning model on tweets retrieved from X related to cybersecurity. The model classifies each tweet as low medium and high risk. The algorithm is random forest

--- a/Project_4.0/templates/base.html
+++ b/Project_4.0/templates/base.html
@@ -38,6 +38,14 @@
                     </li>
 
                     <li role="presentation" class="nav-item">
+                        <a class="nav-link" href="/footprinting"> Footprinting </a>
+                    </li>
+
+                    <li role="presentation" class="nav-item">
+                        <a class="nav-link" href="/checkNews"> Check News </a>
+                    </li>
+
+                    <li role="presentation" class="nav-item">
                         <a class="nav-link" href="/logout"> Logout </a>
                     </li>   
 
