Did some frontend UI work on the Pste checking functionality. Also notice model was overfitting and always predicing not_news. Changed the model to use random forest with undersampling. Performance went way down to about 0.6 accuraccy but the model is now predicting high risk and not news. Still not predicting normalnews though.

--- a/Project_4.0/templates/checkPastes.html
+++ b/Project_4.0/templates/checkPastes.html
@@ -8,7 +8,13 @@
 </form>
 
 {%if result is defined %}
-<p1>{{result}}</p1>
+{% for paste in result %}
+<div class="card mb-3" > 
+  <h5 class="card-title">Paste ID {{ paste.id }}</h5>
+  <p class="card-text">Time: {{ paste.time }}</p>
+  <p class="card-text">{{ paste.text }}</p>
+</div>
+{% endfor %}
 {% endif %}
 
 {% endblock %}
