--- a/Project_4.0/templates/checkFile.html
+++ b/Project_4.0/templates/checkFile.html
@@ -1,14 +1,31 @@
 {% extends "base.html" %}
 {% block title %}Check File{% endblock %}
+{% block header %}Check File{% endblock %}
 {% block content %}
-<h1>Upload File to check</h1>
+
 <form action="/checkFile" method="post" enctype="multipart/form-data">
     <input type="file" name="file" id="file">
     <input type="submit" value="submit">
 </form>
 
 {%if result is defined %}
-<p1>{{result}}</p1>
+<div class="card mb-3">
+    <h5 class="card-title">File Name: {{ result["filename"] }}</h5>
+    <p class="card-text"> Malicious:  {{ result["results"]["malicious"] }}</p>
+    <p class="card-text"> Suspicious: {{ result["results"]["suspicious"] }}</p>
+    <p class="card-text"> Undetected:  {{ result["results"]["undetected"] }}</p>
+    <p class="card-text"> Harmless:  {{ result["results"]["harmless"] }}</p>
+    <p class="card-text"> Timeout:  {{ result["results"]["timeout"] }}</p>
+    <p class="card-text"> Confirmed Timeout:  {{ result["results"]["confirmed_timeout"] }}</p>
+    <p class="card-text"> Failure:  {{ result["results"]["failure"] }}</p>
+    <p class="card-text"> Type Unsupported: {{ result["results"]["type_unsupported"] }}</p>
+    <form id="saveForm" action="/save" method="POST">
+        <input type="hidden" name="card_to_save" value="{{ result }}">
+        <button type="submit" class="btn btn-primary">Save</button>
+    </form>
+    
+</div>
+
 {% endif %}
 
 {% endblock %}
