--- a/Project_4.0/templates/checkNews.html
+++ b/Project_4.0/templates/checkNews.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Footprinting{% endblock %}
+{% block header %}Recent Cybersecurity news from X{% endblock %}
 {% block content %}
-<h1>Recent Cybersecurity News from X</h1>
+
 
 {%if result is defined %}
 {% for tweet in result %}
@@ -12,9 +13,14 @@
             {% elif tweet.prediction == 3 %} style="background-color: #AFE1AF;"
             {% else %} style="background-color: #FFFFFF;"
             {% endif %}> 
-  <h5 class="card-title">Created at {{ tweet.created_at }}</h5>
+  <h5 class="card-title">Tweet</h5>
+  <p class="card-text">Created at {{ tweet.created_at }}</p>
   <p class="card-text">{{ tweet.full_text }}</p>
-  <p class="card-text"><small class="text-muted">{{ tweet.prediction }}</small></p>
+  <p class="card-text"></p>
+  <form id="saveForm" action="/save" method="POST">
+    <input type="hidden" name="card_to_save" value="{{ {'title': 'Tweet', 'risk': tweet.prediction, 'results': {'Created at': tweet.created_at,'Text': tweet.full_text }} }}">
+    <button type="submit" class="btn btn-primary">Save</button>
+  </form> 
 </div>
 {% endfor %}
 {% endif %}
