--- a/Project_4.0/templates/checkPastes.html
+++ b/Project_4.0/templates/checkPastes.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Check Pastes{% endblock %}
+{% block header %}Check Pastes{% endblock %}
 {% block content %}
-<h1>Upload Terms to check</h1>
+
 <form action="/checkPastes" method="post" enctype="multipart/form-data">
 <input type="text" name="terms" id="terms" >
     <input type="submit" value="submit">
@@ -13,6 +14,10 @@
   <h5 class="card-title">Paste ID {{ paste.id }}</h5>
   <p class="card-text">Time: {{ paste.time }}</p>
   <p class="card-text">{{ paste.text }}</p>
+  <form id="saveForm" action="/save" method="POST">
+    <input type="hidden" name="card_to_save" value="{{ {'title': 'Paste: ' + paste.id , 'results': {'Terms searched': paste.terms ,'Time': paste.time , 'text':  paste.text  }} }}">
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
 </div>
 {% endfor %}
 {% endif %}
