--- a/Project_4.0/templates/checkURL.html
+++ b/Project_4.0/templates/checkURL.html
@@ -1,15 +1,28 @@
 {% extends "base.html" %}
 {% block title %}Home Page{% endblock %}
+{% block header %}Check URL{% endblock %}
 {% block content %}
-<h1>Enter URL to check</h1>
+
 <form action="/checkURL" method="POST">
     <p>URL to Check <input type="text" name="URL" /></p>
     <p><input type="submit" value="submit" /></p>
 </form>
 
 {%if result is defined %}
-<p1>{{result}}</p1>
+<div class="card mb-3">
+    <h5 class="card-title">URL: {{ result["url"] }}</h5>
+    <p class="card-text"> Malicious:  {{ result["results"]["malicious"] }}</p>
+    <p class="card-text"> Suspicious: {{ result["results"]["suspicious"] }}</p>
+    <p class="card-text"> Undetected:  {{ result["results"]["undetected"] }}</p>
+    <p class="card-text"> Harmless:  {{ result["results"]["harmless"] }}</p>
+    <p class="card-text"> Timeout:  {{ result["results"]["timeout"] }}</p>
+    <form id="saveForm" action="/save" method="POST">
+        <input type="hidden" name="card_to_save" value="{{ result }}">
+        <button type="submit" class="btn btn-primary">Save</button>
+    </form>
+    
+</div>
+
 {% endif %}
 
 {% endblock %}
-
