--- a/Project_4.0/templates/checkPastes.html
+++ b/Project_4.0/templates/checkPastes.html
@@ -15,11 +15,34 @@
   <p class="card-text">Time: {{ paste.time }}</p>
   <p class="card-text">{{ paste.text }}</p>
   <form id="saveForm" action="/save" method="POST">
-    <input type="hidden" name="card_to_save" value="{{ {'title': 'Paste: ' + paste.id , 'results': {'Terms searched': paste.terms ,'Time': paste.time , 'text':  paste.text  }} }}">
+    <input type="hidden" name="card_to_save" value="{{ {'title': 'Paste: ' + paste.id , 'type': 'paste', 'results': {'Terms searched': paste.terms ,'Time': paste.time , 'text':  paste.text  }} }}">
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
 </div>
 {% endfor %}
 {% endif %}
+
+<h4>Past Results</h4>
+<div class="row">
+    {% if old_results is defined %}
+    {% for item in old_results %}
+    <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card" {% if item.risk==0 %} style="background-color: #FFFFFF;" {% elif item.risk==1 %}
+            style="background-color: #FA8072;" {% elif item.risk==2 %} style="background-color: #FFFACD;" {% elif
+            item.risk==3 %} style="background-color: #AFE1AF;" {% else %} style="background-color: #FFFFFF;" {% endif
+            %}>
+            <div class="card-body">
+                <h5 class="card-title">{{ item.title }}</h5>
+                <ul class="list-group list-group-flush">
+                    {% for key, value in item.results.items() %}
+                    <li class="list-group-item">{{ key }}: {{ value }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+</div>
 
 {% endblock %}
